Fix z-index collision for modals and alerts. Alerts now above modal

--- a/styles/modals.css
+++ b/styles/modals.css
@@ -6,7 +6,7 @@
 	left: 0;
 	right: 0;
 	background-color: rgba(255, 255, 255, 0.972);
-	z-index: 100;
+	z-index: 50;
 }
 
 .modal-content {
